--- a/package.json
+++ b/package.json
@@ -31,11 +31,16 @@
   },
   "homepage": "https://github.com/CaroloFantasma/scl-2018-01-FE-markdown#readme",
   "dependencies": {
+    "babel-eslint": "^8.2.6",
     "chai": "^4.1.2",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^2.0.0",
+    "eslint-plugin-react": "^7.11.1",
     "mocha": "^5.2.0",
     "save-dev": "^2.0.0"
   },
   "devDependencies": {
-    "eslint": "^5.4.0"
+    "eslint": "^5.4.0",
+    "eslint-config-airbnb-base": "^13.1.0"
   }
 }
