--- a/package.json
+++ b/package.json
@@ -1,10 +1,29 @@
 {
   "name": "scl-2018-01-fe-markdown",
   "version": "1.0.0",
-  "description": "Leer y analizar archivos en formato Markdown, para verificar los links que contengan y reportar algunas estadísticas.",
+  "description": "Leer y analizar archivos en formato Markdown para verificar los links que contengan y reportar algunas estadísticas.",
   "main": "index.js",
   "directories": {
-    "lib": "lib"
+    "lib": "lib",
+    "test": "test"
+  },
+  "dependencies": {
+    "babel-eslint": "^8.2.6",
+    "chai": "^4.1.2",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^2.0.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-standard": "^3.1.0",
+    "save-dev": "^2.0.0",
+    "standard": "^11.0.1"
+  },
+  "devDependencies": {
+    "mocha": "^5.2.0"
   },
   "scripts": {
     "test": "mocha"
@@ -17,11 +36,8 @@
     "markdown",
     "links",
     "library",
+    "npm",
     "javascript",
-    "lenguaje",
-    "de",
-    "marcado",
-    "ligero",
     "md"
   ],
   "author": "Carolina Lastra",
@@ -29,18 +45,5 @@
   "bugs": {
     "url": "https://github.com/CaroloFantasma/scl-2018-01-FE-markdown/issues"
   },
-  "homepage": "https://github.com/CaroloFantasma/scl-2018-01-FE-markdown#readme",
-  "dependencies": {
-    "babel-eslint": "^8.2.6",
-    "chai": "^4.1.2",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^2.0.0",
-    "eslint-plugin-react": "^7.11.1",
-    "mocha": "^5.2.0",
-    "save-dev": "^2.0.0"
-  },
-  "devDependencies": {
-    "eslint": "^5.4.0",
-    "eslint-config-airbnb-base": "^13.1.0"
-  }
+  "homepage": "https://github.com/CaroloFantasma/scl-2018-01-FE-markdown#readme"
 }
