--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
   "dependencies": {
     "babel-eslint": "^8.2.6",
     "chai": "^4.1.2",
-    "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^2.0.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-standard": "^3.1.0",
     "save-dev": "^2.0.0",
     "standard": "^11.0.1"
   },
   "devDependencies": {
+    "eslint": "^5.4.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-standard": "^3.1.0",
     "mocha": "^5.2.0"
   },
   "scripts": {
@@ -42,6 +42,9 @@
   ],
   "author": "Carolina Lastra",
   "license": "ISC",
+  "bin": {
+    "md-links": "index.js"
+  },
   "bugs": {
     "url": "https://github.com/CaroloFantasma/scl-2018-01-FE-markdown/issues"
   },
