--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-jsx-a11y": "^2.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "marked": "^0.5.0",
     "save-dev": "^2.0.0",
     "standard": "^11.0.1"
   },
