--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-jsx-a11y": "^2.0.0",
     "eslint-plugin-react": "^7.11.1",
     "marked": "^0.5.0",
+    "node-fetch": "^2.2.0",
     "save-dev": "^2.0.0",
     "standard": "^11.0.1"
   },
