--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "babel-eslint": "^8.2.6",
     "chai": "^4.1.2",
+    "colors": "^1.3.2",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-jsx-a11y": "^2.0.0",
     "eslint-plugin-react": "^7.11.1",
