--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scl-2018-01-fe-markdown",
+  "name": "markdown-links-finder",
   "version": "1.0.0",
   "description": "Leer y analizar archivos en formato Markdown para verificar los links que contengan y reportar algunas estadísticas.",
   "main": "index.js",
